--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,10 @@
     box-shadow: 0 1px 4px rgba(0,0,0,.37);
 }
 
+.blocklyToolboxDiv {
+    width: 150px;
+}
+
 .dropdown-bar {
     display: block;
     font-family: sans-serif;
